# randomized

./: .gitignore  CMakeLists.txt  Makefile  README.md  Utility.cpp  Utility.h  defs.h  tester.cpp
src/: palindrome_check.php
